--- a/Machine Learning Model Training and Evaluation with Feature Reduction.ipynb
+++ b/Machine Learning Model Training and Evaluation with Feature Reduction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPa+C+SWQHUoX/sxS5R7zm4",
+      "authorship_tag": "ABX9TyN6haKyMvG5qHhpBA5AKerT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "# **Part A - Leveraging Machine Learning for Network Threat Detection and Performance Enhancement**"
+        "# **Part A - Leveraging Machine Learning for Network Threat Detection and Performance Enhancement - with Reduced Features**"
       ],
       "metadata": {
         "id": "lBo8WcIUZA-L"
